Lyceum/static/styles/post.css
/* ... */
.post-div {
    border: 1px solid black;
}

.mobile-bottom {
    display: none;
}

@media only screen and (max-width: 960px) {
    .write-middle {
        width: 100%;
    }

    .middle-header {
        display: none;
    }

    .middle-header-mobile {
        display: flex;
        min-height: 40px;
    }

    .right,
    .left {
        display: none;
    }

    .mobile-bottom {
        display: flex;
    }

    .middle-header-mobile {
        display: flex;
        width: 100%;
        align-items: center;
        justify-content: center;
        border-bottom: 3px solid #000000;
        background-color: #000;
        gap: 3px;
        height: 33px;
    }
    
    .middle-header-mobile a {
        display: flex;
        flex: 1;
        justify-content: center;
        align-items: center;
        background-color: #ffffff;
        text-decoration: none;
        padding: 5px 0;
    }
    
    .middle-header-mobile a h1{
        font-family: 'Poppins', sans-serif;
        font-size: 16px;
        color: #000000;
    }
    
    .middle-header-mobile a:hover {
        background-color: #F28500;
    }

    .write-middle-body {
        display: flex;
        flex: 1;
        flex-direction: column;
        align-items: center;
        width: 100vw;
        overflow: hidden;
    }

    .alignment-container {
        display: flex;
        flex-direction: column;
        height: 100%;
        width: 90%;
        align-items: center;
        justify-content: space-evenly;
    }

    .post-input {
        margin: 0;
        width: 100%;
    }

    .radio-options {
        gap: 4vw;
        width: 100%;
    }

    #title {
        font-size: 6vw;
    }

    #tags {
        font-size: 6vw;
    }

    .post-input {
        width: 100%;
        font-size: 6vw;
    }

    .post-input input {
        flex: 1;
    }

    #post-input-text {
        flex-direction: column;
    }

    #decleration:checked + label {
        box-shadow: inset 0 -3.6vw 0 #F28500;
    }

    #theory:checked + label {
        box-shadow: inset 0 -3.6vw 0 #30f200;
    }

    #post-input-text textarea {
        width: 100%;
        box-sizing: border-box;
    }

    .post-input textarea {
        display: flex;
        font-size: 4.5vw;
    }

    .mobile-bottom {
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        width: 100%;
        padding: 5px;
        gap: 5px;
        box-sizing: border-box;
        background-color: black;
        margin-top: auto;
    }

    .mobile-bottom input {
        display: flex;
        height: 100%;
        justify-content: center;
        align-items: center;
        width: 100%;
        border: none;
    }

    .mobile-bottom input {
        font-family: 'Poppins', sans-serif;
        font-weight: 700;
        font-size: 3vh;
    }

    .mobile-bottom div {
        display: flex;
        height: 7.5vh;
        width: 100%;
        gap: 5px;
    }

    .mobile-bottom-layer-1 a {
        display: flex;
        justify-content: center;
        align-items: center;
        width: 50%;
    }

    .mobile-bottom-layer-2 a {
        display: flex;
        justify-content: center;
        align-items: center;
        width: 100%;
    }

    .delete-btn-mobile input {
        color: #fff;
        background-color: #d60000;
    }

    .draft-btn-mobile input {
        color: #F28500;
        background-color: #fff;
    }

    .post-btn-mobile input {
        color: #ffffff;
        background-color: #32a838;
    }

    .draft-content {
        margin-left: 10px;
        margin-right: 10px;
    }

    .drafts-middle-body {
        display: flex;
        flex: 1;
        flex-direction: column;
        align-items: center;
        width: 100vw;
        overflow: scroll;
        overflow-x: hidden;
    }

    .draft-index h1 {
        font-size: 9vw;
    }

    .draft-title h1 {
        font-size: 6vw;
    }

    .draft-description p {
        font-size: 5vw;
        width: 100%;
    }

    .draft-tags h1 {
        font-size: 6vw;
    }

    .posts-page {
        width: 100vw;
    }

    .posts-page form {
        width: 100vw;
    }

    .posts-middle-body {
        display: flex;
        flex: 1;
        flex-direction: column;
        align-items: center;
        width: 100vw;
        overflow: scroll;
        overflow-x: hidden;
    }

    .post a {
        width: 100%;
        margin: 0;
        border-radius: 0;
        border: none;
        border-top: 3px solid #F28500;
    }

    .post h1{
        font-family: 'Poppins', sans-serif;
        font-size: 8vw;
        color: black;
        padding: 15px 20px 0px 20px;
    }

    .post h1 span {
        box-shadow: inset 0 -4vw 0 #F28500;
    }

    .post-bar {
        align-items: center;
    }

    .post-bar h3 {
        margin-left: auto;
        font-size: 4vw;
        font-family: 'Poppins', sans-serif;
        color: black;
    }

    .post h2{
        font-family: 'Poppins', sans-serif;
        font-size: 4vw;
        color: black;
        margin: 0px 20px 5px 20px;
    }

    .post h4 {
        font-size: 3.8vw;
    }

    .middle-title {
        margin-top: 4vh;
        margin-bottom: 3vh;
    }

    .middle-title h1 {
        font-size: 7vw;
        box-shadow: none;
        box-shadow: inset 0 -4vw 0 #F28500;
    }
}

